--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="container">
             <h1>Guilherme Bettoni</h1>
             <div class="menu">
-                <a href="../ex1/index.html">HOME</a> |
-                <a href="../ex2/filmix.html">FILMIX</a> |
-                <a href="../ex3/todo.html">TO-DO</a> |
-                <a href="../ex4/evento.html">EVENTO</a> |
-                <a href="../ex5/feedback.html">FEEDBACK</a> 
+                <a href="index.html">HOME</a> |
+                <a href="filmix.html">FILMIX</a> |
+                <a href="todo.html">TO-DO</a> |
+                <a href="evento.html">EVENTO</a> |
+                <a href="feedback.html">FEEDBACK</a> 
             </div>
             <hr>
             <div class="container-header">
@@ -44,4 +44,5 @@
             <hr> 
         </div>   
     </body>
+
 </html>
